--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,42 @@
-spring.application.name=SecurityGenelTekrarr
+spring.application.name=oauthuygulama
+
+spring.profiles.active=default
+
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.password=12345
+spring.datasource.username=postgres
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+management.endpoint.env.enabled=true
+management.info.env.enabled=true
+
+degiskenler.isim="uzay"
+
+degiskenler.sehirler="?stanbul","Ankara","?zmir"
+
+degiskenler.ulke[0]="Ankara"
+degiskenler.ulke[1]="Baku"
+
+degiskenler.okul.adi="igü"
+degiskenler.okul.konumu="avc?lar"
+
+spring.security.oauth2.client.registration.github.client-id=Iv23lipvCGTPof3DAPrX
+spring.security.oauth2.client.registration.github.client-secret=eaf4f1b02ff3a5c8c4e455e2d039075ed247e97e
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
+
+
+
+
+
